Fix pagination alignment to properly move to left side
Updated the CSS selector to be more specific (.base-table-container) to
properly override the base-table default styling. Added right padding to
the paginator container to ensure space for the timestamp display on the
right side.

Changes:
- circuits-unified.component.scss: Strengthened selector specificity and
  added padding-right to accommodate timestamp

--- a/src/app/components/pages/circuits-unified/circuits-unified.component.scss
+++ b/src/app/components/pages/circuits-unified/circuits-unified.component.scss
@@ -54,12 +54,13 @@
     }
   }
 
-  // Move pagination to the left
+  // Move pagination to the left and add space for timestamp on right
   ::ng-deep {
-    .mat-mdc-paginator {
+    .base-table-container .mat-mdc-paginator {
       .mat-mdc-paginator-container {
         justify-content: flex-start !important;
-        padding-left: 16px;
+        padding-left: 0;
+        padding-right: 200px; // Make room for timestamp on right
       }
     }
   }
